ctx-demo/08-jaeger-all-in-one/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-svc
spec:
  selector:
   app: jaeger
  type: ClusterIP
  ports:
  - port: 16686
    targetPort: 16686
